--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -240,17 +240,17 @@
             </div>
             <div class="about_hero_bottom_strip">
                 <div class="about_strip_item animate fadeInUp">
-                    <img src="img/plane.gif" alt="">
+                    <img src="img/plane.gif" alt="Air freight companies in Dubai">
                     <div class="about_stripline"></div>
                     <h6>Quality Assurance</h6>
                 </div>
                 <div class="about_strip_item animate fadeInUp">
-                    <img src="img/plane.gif" alt="">
+                    <img src="img/plane.gif" alt="Air freight services in Dubai">
                     <div class="about_stripline"></div>
                     <h6>Dedicated Service</h6>
                 </div>
                 <div class="about_strip_item animate fadeInUp">
-                    <img src="img/plane.gif" alt="">
+                    <img src="img/plane.gif" alt="International air freight Services">
                     <div class="about_stripline"></div>
                     <h6>Satisfaction at Par</h6>
                 </div>
@@ -261,7 +261,7 @@
     <section class="about_sec1">
         <div class="row ">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 about_sec1_col1 animate fadeRight">
-                <img src="img/Group 371.webp" alt="">
+                <img src="img/Group 371.webp" alt="Air Freight Forwarding Company in Dubai ">
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 about_sec1_col2 animate fadeLeft">
                 <div class="about_sec1_col2_txt">
@@ -379,8 +379,8 @@
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 affiliations_col2">
                 <div class="affiliations_logos">
-                    <img src="img/freigth-net.webp" alt="">
-                    <img src="img/c5c.webp" alt="">
+                    <img src="img/freigth-net.webp" alt="Air Freight Forwarding Company in Dubai ">
+                    <img src="img/c5c.webp" alt="Air Freight Forwarding Company in Dubai ">
                 </div>
             </div>
         </div>
@@ -462,7 +462,7 @@
         <div style="padding-bottom: 50px;" class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
                 <div class="home_contact_image">
-                    <img src="img/forklift.webp" alt="">
+                    <img src="img/forklift.webp" alt="Warehousing Company in Dubai">
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 home_contact_col2 animate fadeLeft">
@@ -525,8 +525,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="United Arab Emirates">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -540,7 +540,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
