--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-5 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -243,7 +243,7 @@
 
 
             <div class="container-image">
-                <img src="img/container.webp" alt="Hanging Container">
+                <img src="img/container.webp" alt="INC Shipping Services Dubai">
             </div>
         </div>
     </section>
@@ -263,13 +263,13 @@
         </div>
         <div class="about_sticker">
             <div class="about_sticker_img_container">
-                <img src="img/Group 321.webp" alt="">
+                <img src="img/Group 321.webp" alt="INC Shipping Services">
             </div>
             <div class="about_sticker_img_container">
-                <img src="img/Group 322.webp" alt="">
+                <img src="img/Group 322.webp" alt="INC Client Relationship ">
             </div>
             <div class="about_sticker_img_container">
-                <img src="img/Group 323.webp" alt="">
+                <img src="img/Group 323.webp" alt="INC Client Relationship ">
             </div>
         </div>
         <div class="about_sticker_text row">
@@ -296,7 +296,7 @@
             </div>
         </div>
         <div class="about_bottom_banner">
-            <img src="img/Group 310.webp" alt="">
+            <img src="img/Group 310.webp" alt="Shipping Company in Dubai UAE ">
         </div>
     </section>
 
@@ -339,25 +339,25 @@
                 <div onclick="window.location.href='air-freight.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon1.webp" alt="">
+                    <img src="img/home_serv_icon1.webp" alt=" Air Freight Services ">
                     Air Freight
                 </div>
                 <div onclick="window.location.href='sea-freight.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon2.webp" alt="">
+                    <img src="img/home_serv_icon2.webp" alt="Sea Freight Services ">
                     Sea Freight
                 </div>
                 <div onclick="window.location.href='road-freight.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon3.webp" alt="">
+                    <img src="img/home_serv_icon3.webp" alt="Road Freight Services">
                     Road Freight
                 </div>
                 <div onclick="window.location.href='customs-clearance.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInUp">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon4.webp" alt="">
+                    <img src="img/home_serv_icon4.webp" alt="Customs Clearance Services">
                     Customs Clearance
                 </div>
             </div>
@@ -365,25 +365,25 @@
                 <div onclick="window.location.href='temprature-controlled-cargo.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon5.webp" alt="">
+                    <img src="img/home_serv_icon5.webp" alt="Temperature Controlled Cargo Services">
                     Temp. Controlled Cargo
                 </div>
                 <div onclick="window.location.href='warehousing.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon6.webp" alt="">
+                    <img src="img/home_serv_icon6.webp" alt="Temperature Controlled Cargo Services">
                     Warehousing
                 </div>
                 <div onclick="window.location.href='cross-trade.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon7.webp" alt="">
+                    <img src="img/home_serv_icon7.webp" alt="Cross Trade Services">
                     Cross Trade
                 </div>
                 <div onclick="window.location.href='project-cargo.html'"
                     class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 home_services_item animate fadeInDown">
                     <div class="dot"></div>
-                    <img src="img/home_serv_icon8.webp" alt="">
+                    <img src="img/home_serv_icon8.webp" alt="Project Cargo Services">
                     Project Cargo
                 </div>
             </div>
@@ -410,7 +410,7 @@
         <div style="padding-bottom: 50px;" class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
                 <div class="home_contact_image">
-                    <img src="img/forklift.webp" alt="">
+                    <img src="img/forklift.webp" alt="Storage Service Provider">
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 home_contact_col2 animate fadeLeft">
@@ -472,8 +472,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="United Arab Emirates">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -487,7 +487,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
