--- a/thankyou.html
+++ b/thankyou.html
@@ -82,7 +82,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -230,7 +230,7 @@
     </section>
 
     <section class="thankyou_img">
-        <img src="img/avatar514.png" alt="">
+        <img src="img/avatar514.png" alt="INC Shipping Logo Design">
     </section>
 
     <section class="thankyou_why_choose">
@@ -246,27 +246,27 @@
 
     <section class="thankyou_next_steps row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 413t.png" alt="">
+            <img src="img/Group 413t.png" alt="Minimal Risk INC Shipping">
             <h6>Review Your Inquiry :</h6>
             <p>Our team will carefully review
                 the details of your request. </p>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 414t.png" alt="">
+            <img src="img/Group 414t.png" alt="Rapid Speed Shipping Services">
             <h6>Get in Touch :</h6>
             <p>We will contact you shortly to discuss
                 your needs and provide
                 personalized solutions.</p>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 415t.png" alt="">
+            <img src="img/Group 415t.png" alt="United Arab Emirates">
             <h6>Collaboration :</h6>
             <p>Work together to mobilize your
                 cargo with accuracy and speed. </p>
         </div>
     </section>
 
-    <img style="margin-bottom: 4%; width: 100%;" src="img/Vector 57.png" alt="">
+    <img style="margin-bottom: 4%; width: 100%;" src="img/Vector 57.png" alt=" Road Freight Forwarding Services in Dubai">
 
     <div style="padding-bottom: 50px;" class="contact_bg row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
@@ -341,8 +341,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="United Arab Emirates">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
