--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -256,7 +256,7 @@
         <div style="padding-bottom: 50px;" class="contact_bg row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
                 <div class="home_contact_image">
-                    <img src="img/forklift.webp" alt="">
+                    <img src="img/forklift.webp" alt="Contact Us - INC SHIPPING">
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 home_contact_col2 animate fadeLeft">
@@ -314,8 +314,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="Expo Dubai">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -329,7 +329,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
