--- a/shipment-to-far-east.html
+++ b/shipment-to-far-east.html
@@ -101,7 +101,7 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -240,22 +240,22 @@
     <section class="service_sub_sec1">
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-0 col-0 service_sub_sec1_col1">
-                <img src="img/image 241.webp" alt="">
+                <img src="img/image 241.webp" alt="Shipping Services To Far East">
             </div>
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/cargo-ship.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="Rapid Speed Shipping Services">
                         <div class="about_stripline"></div>
                         <h6>Rapid Speed</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/cargo-ship.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="Safe Packaging And Delivery">
                         <div class="about_stripline"></div>
                         <h6>Safety At Par</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/cargo-ship.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="INC Expert And Experienced Team">
                         <div class="about_stripline"></div>
                         <h6>Transparent Mechanism</h6>
                     </div>
@@ -333,7 +333,7 @@
 
     <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 383.webp" alt="">
+        <img src="img/Group 383.webp" alt="Shipment To Far East Dubai">
         <div class="row service_sub_sec3_card_container cont_bg_7">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
@@ -484,8 +484,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="United Arab Emirates">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -499,7 +499,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
