--- a/warehousing.html
+++ b/warehousing.html
@@ -240,22 +240,22 @@
     <section class="service_sub_sec1">
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-0 col-0 service_sub_sec1_col1">
-                <img src="img/image 241.webp" alt="">
+                <img src="img/image 241.webp" alt="Storage service Provider">
             </div>
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
+                        <img src="img/warehouse.gif" alt="Secured Warehouses">
                         <div class="about_stripline"></div>
                         <h6>Secured Warehouses</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
+                        <img src="img/warehouse.gif" alt="Real-Time Monitoring Services">
                         <div class="about_stripline"></div>
                         <h6>Real-Time Monitoring</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/warehouse.gif" alt="">
+                        <img src="img/warehouse.gif" alt="Temperature Controlled Care">
                         <div class="about_stripline"></div>
                         <h6>Temperature Controlled Care</h6>
                     </div>
@@ -339,7 +339,7 @@
 
     <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 387.webp" alt="">
+        <img src="img/Group 387.webp" alt="Warehousing Company in Dubai / UAE">
         <div class="row service_sub_sec3_card_container cont_bg_9">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
@@ -443,8 +443,8 @@
             </div>
             <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 ">
                 <div class="contact_dubai_logos">
-                    <img src="img/emirates-png-150x150.webp" alt="">
-                    <img src="img/2020png-150x150.webp" alt="">
+                    <img src="img/emirates-png-150x150.webp" alt="United Arab Emirates">
+                    <img src="img/2020png-150x150.webp" alt="Expo Dubai">
                 </div>
             </div>
         </div>
@@ -458,7 +458,7 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
