--- a/sitemap.html
+++ b/sitemap.html
@@ -36,7 +36,7 @@
 
 
     <!-- Primary Meta Tags -->
-    <title>INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE</title>
+    <title>Sitemap | INC Shipping - sitemap</title>
     <meta name="description" content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and
         Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
         personalized service to ensure safe and timely delivery of your cargo." />
@@ -315,6 +315,9 @@ Welcome to INC Express Shipping LLC's official website. Agree to our Terms and C
             <p><strong><a href="https://www.incshipping.com/cookies-policy"
                         title="Cookies Policy | INC Shipping - Your Perfect Shipping Partners in Dubai">Cookies Policy |
                         INC Shipping - Your Perfect Shipping Partners in Dubai</a></strong></p>
+            <p><strong><a href="https://www.incshipping.com/sitemap"
+                        title="Sitemap | INC Shipping - sitemap">Sitemap |
+                        INC Shipping - Your Perfect Shipping Partners in Dubai</a></strong></p>
 
         </div>
     </section>
@@ -398,7 +401,8 @@ Welcome to INC Express Shipping LLC's official website. Agree to our Terms and C
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
